--- a/ordercloud-templates/templates/typescriptangular/api.service.mustache
+++ b/ordercloud-templates/templates/typescriptangular/api.service.mustache
@@ -37,7 +37,9 @@ import { {{classname}}Interface }                            from './{{classname
  * {{&description}}
  */
 {{/description}}
-@Injectable()
+@Injectable({
+    providedIn: 'root'
+})
 {{#withInterfaces}}
 export class {{classname}} implements {{classname}}Interface {
 {{/withInterfaces}}
