--- a/ordercloud-templates/templates/typescriptangular/auth.service.mustache
+++ b/ordercloud-templates/templates/typescriptangular/auth.service.mustache
@@ -14,7 +14,9 @@ import { AccessToken }                                       from '../model/acce
 
 
 
-@Injectable()
+@Injectable({
+    providedIn: 'root'
+})
 export class OcAuthService {
 
     protected authPath = 'https://auth.ordercloud.io/oauth/token';
