--- a/ordercloud-templates/templates/typescriptangular/token.service.mustache
+++ b/ordercloud-templates/templates/typescriptangular/token.service.mustache
@@ -4,7 +4,9 @@ import { CookieService }                                     from 'ngx-cookie';
 import { Configuration }                                     from '../configuration';
 
 
-@Injectable()
+@Injectable({
+    providedIn: 'root'
+})
 export class OcTokenService {
 
     private authTokenCookieName: string;
