--- a/ordercloud-templates/templates/typescript-angular/package.mustache
+++ b/ordercloud-templates/templates/typescript-angular/package.mustache
@@ -19,7 +19,7 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc --outDir dist/",
+    "build": "tsc --skipLibCheck --outDir dist/",
     "postinstall": "npm run build"
   },
   "peerDependencies": {
